--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -31,14 +31,26 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:layout_width="0dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
-                        android:layout_weight="1"
                         android:fontFamily="@font/special_gothic_expanded_bold"
                         android:text="@string/top_bar_title"
                         android:textColor="@color/black"
                         android:textSize="24sp" />
+
+                    <com.google.android.material.loadingindicator.LoadingIndicator
+                        android:id="@+id/loadingIndicator"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginStart="8dp"
+                        app:indicatorColor="@color/primary" />
+
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"/>
 
                     <ImageButton
                         android:id="@+id/settingsButton"
@@ -605,11 +617,11 @@
         android:id="@+id/stats"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:contentDescription="@string/export_stats"
-        android:scaleType="centerCrop"
         android:layout_marginStart="8dp"
-        android:padding="12dp"
         android:backgroundTint="@android:color/transparent"
+        android:contentDescription="@string/export_stats"
+        android:padding="12dp"
+        android:scaleType="centerCrop"
         android:src="@drawable/share_stats"
         app:layout_constraintBottom_toBottomOf="@+id/startButton"
         app:layout_constraintEnd_toEndOf="parent"
