--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,9 +11,11 @@
     <color name="very_dark_grey">#1A1A1A</color>
     <color name="primary">#FF690C</color>
 
-    <color name="level_0">#0DFF690C</color>
-    <color name="level_1">#59FF690C</color>
-    <color name="level_2">#FF690C</color>
+    <color name="level_0">#FFF3E8</color> <!-- very light tint -->
+    <color name="level_1">#FFD1B2</color> <!-- light orange -->
+    <color name="level_2">#FFAA66</color> <!-- medium orange -->
+    <color name="level_3">#FF8533</color> <!-- strong orange -->
+    <color name="level_4">#FF690C</color> <!-- primary (solid) -->
 
     <color name="white_fix">#FFFFFF</color>
 </resources>
