--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -414,12 +414,14 @@
                         android:textSize="20sp" />
 
                     <TextView
+                        android:id="@+id/leaderboard"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
                         android:layout_gravity="center_vertical"
                         android:fontFamily="@font/special_gothic_semibold"
                         android:text="@string/view_more"
-                        android:textColor="@color/black"
+                        android:textColor="@color/primary"
                         android:textSize="12sp"
                         app:tint="@color/black" />
 
