--- a/app/src/main/res/layout/item_records.xml
+++ b/app/src/main/res/layout/item_records.xml
@@ -8,7 +8,7 @@
     android:layout_marginBottom="8dp"
     app:cardElevation="0dp"
     app:cardCornerRadius="16dp"
-    app:cardBackgroundColor="@color/white">
+    app:cardBackgroundColor="@color/very_light_grey">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -16,46 +16,31 @@
         android:paddingVertical="8dp">
 
         <TextView
-            android:id="@+id/rankTextView"
-            android:layout_width="0dp"
+            android:id="@+id/dateTextView"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:fontFamily="@font/special_gothic_semibold"
-            android:text="1"
+            android:fontFamily="@font/special_gothic_semiexpanded_regular"
+            android:text="@string/hyphen"
             android:textAlignment="center"
             android:textColor="@color/black"
-            android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/userImageView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/userImageView"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_marginStart="64dp"
-            android:src="@drawable/person1"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.5" />
-
         <TextView
-            android:id="@+id/userNameTextView"
-            android:layout_width="0dp"
+            android:id="@+id/timeTextView"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            android:fontFamily="@font/special_gothic_semibold"
+            android:layout_marginStart="16dp"
+            android:fontFamily="@font/special_gothic_expanded_bold"
             android:paddingHorizontal="11dp"
-            android:text="@string/person_name_1"
-            android:textColor="@color/black"
-            android:textSize="16sp"
+            android:text="@string/_0m_0s"
+            android:textColor="@color/grey"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/countTextView"
-            app:layout_constraintStart_toEndOf="@+id/userImageView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
@@ -64,10 +49,9 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginEnd="16dp"
-            android:fontFamily="@font/special_gothic_expanded_semibold"
-            android:text="@string/score_1"
-            android:textColor="@color/grey"
-            android:textSize="16sp"
+            android:fontFamily="@font/special_gothic_semiexpanded_semibold"
+            android:text="@string/hyphen"
+            android:textColor="@color/dark_grey"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
