--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -103,6 +103,8 @@
                 </androidx.cardview.widget.CardView>
 
                 <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/statsCard"
+                    android:visibility="invisible"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp">
@@ -273,6 +275,8 @@
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <LinearLayout
+                    android:id="@+id/thisMonthCardHeader"
+                    android:visibility="invisible"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
@@ -307,8 +311,10 @@
                 </LinearLayout>
 
                 <androidx.cardview.widget.CardView
+                    android:id="@+id/thisMonthCard"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:visibility="invisible"
                     android:layout_marginTop="12dp"
                     app:cardBackgroundColor="@color/very_light_grey"
                     app:cardCornerRadius="16dp"
@@ -399,8 +405,10 @@
                 </androidx.cardview.widget.CardView>
 
                 <LinearLayout
+                    android:id="@+id/leaderboardCardHeader"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:visibility="invisible"
                     android:layout_marginTop="20dp"
                     android:orientation="horizontal">
 
@@ -428,9 +436,11 @@
                 </LinearLayout>
 
                 <androidx.cardview.widget.CardView
+                    android:id="@+id/leaderboardCard"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
+                    android:visibility="invisible"
                     app:cardBackgroundColor="@color/very_light_grey"
                     app:cardCornerRadius="16dp"
                     app:cardElevation="0dp">
@@ -452,7 +462,7 @@
                                 android:layout_width="24dp"
                                 android:layout_height="24dp"
                                 android:src="@drawable/person1"
-                                android:visibility="invisible" />
+                                android:visibility="visible" />
 
                             <TextView
                                 android:id="@+id/firstName"
@@ -465,7 +475,7 @@
                                 android:text="@string/person_name_1"
                                 android:textColor="@color/dark_grey"
                                 android:textSize="16sp"
-                                android:visibility="invisible" />
+                                android:visibility="visible" />
 
                             <TextView
                                 android:id="@+id/firstCount"
@@ -476,7 +486,7 @@
                                 android:text="@string/score_1"
                                 android:textColor="@color/dark_grey_85"
                                 android:textSize="16sp"
-                                android:visibility="invisible" />
+                                android:visibility="visible" />
 
                         </LinearLayout>
 
@@ -491,7 +501,7 @@
                                 android:layout_width="24dp"
                                 android:layout_height="24dp"
                                 android:src="@drawable/person2"
-                                android:visibility="invisible" />
+                                android:visibility="visible" />
 
                             <TextView
                                 android:id="@+id/secondName"
@@ -504,7 +514,7 @@
                                 android:text="@string/person_name_2"
                                 android:textColor="@color/dark_grey"
                                 android:textSize="16sp"
-                                android:visibility="invisible" />
+                                android:visibility="visible" />
 
                             <TextView
                                 android:id="@+id/secondCount"
@@ -515,7 +525,7 @@
                                 android:text="@string/score_2"
                                 android:textColor="@color/dark_grey_85"
                                 android:textSize="16sp"
-                                android:visibility="invisible" />
+                                android:visibility="visible" />
 
                         </LinearLayout>
 
@@ -529,7 +539,7 @@
                                 android:layout_width="24dp"
                                 android:layout_height="24dp"
                                 android:src="@drawable/person3"
-                                android:visibility="invisible" />
+                                android:visibility="visible" />
 
                             <TextView
                                 android:id="@+id/thirdName"
@@ -542,7 +552,7 @@
                                 android:text="@string/person_name_3"
                                 android:textColor="@color/dark_grey"
                                 android:textSize="16sp"
-                                android:visibility="invisible" />
+                                android:visibility="visible" />
 
                             <TextView
                                 android:id="@+id/thirdCount"
@@ -553,7 +563,7 @@
                                 android:text="@string/score_3"
                                 android:textColor="@color/dark_grey_85"
                                 android:textSize="16sp"
-                                android:visibility="invisible" />
+                                android:visibility="visible" />
 
                         </LinearLayout>
 
@@ -562,8 +572,10 @@
                 </androidx.cardview.widget.CardView>
 
                 <LinearLayout
+                    android:id="@+id/globalCardHeader"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:visibility="invisible"
                     android:layout_marginTop="20dp"
                     android:orientation="horizontal"
                     tools:ignore="UseCompoundDrawables">
@@ -588,6 +600,8 @@
                 </LinearLayout>
 
                 <androidx.cardview.widget.CardView
+                    android:id="@+id/globalCard"
+                    android:visibility="invisible"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
