feat: Use string resources for bottom navigation titles
This commit updates the bottom navigation menu to use string resources for its item titles, facilitating localization.

- **`strings.xml`:**
    - Added new string resources:
        - `home`
        - `daily_stats`
        - `leaderboard1`
- **`bottom_nav.xml`:**
    - Changed the `android:title` attributes for `dashboardFragment`, `dailyStatsFragment`, and `leaderboardFragment` to reference the newly added string resources (`@string/home`, `@string/daily_stats`, `@string/leaderboard1` respectively).
- **`HomeActivity.kt`:**
    - Changed `Context.MODE_PRIVATE` to `MODE_PRIVATE` when accessing shared preferences, as it's directly available within the Activity context.

--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -2,16 +2,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/dashboardFragment"
-        android:title="Home"
+        android:title="@string/home"
         android:icon="@drawable/home" />
 
     <item
         android:id="@+id/dailyStatsFragment"
-        android:title="Daily Stats"
+        android:title="@string/daily_stats"
         android:icon="@drawable/timer" />
 
     <item
         android:id="@+id/leaderboardFragment"
-        android:title="Leaderboard"
+        android:title="@string/leaderboard1"
         android:icon="@drawable/leaderboard" />
 </menu>
