--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -10,8 +10,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="24dp">
+        android:orientation="vertical">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/back_button"
@@ -19,6 +18,8 @@
             android:layout_height="wrap_content"
             app:cardBackgroundColor="@color/very_light_grey"
             app:cardCornerRadius="24dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginHorizontal="24dp"
             app:cardElevation="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -57,6 +58,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
+            android:layout_marginHorizontal="24dp"
             android:fontFamily="@font/special_gothic_expanded_bold"
             android:text="@string/notifications1"
             android:textColor="@color/black"
@@ -66,6 +68,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:layout_marginHorizontal="24dp"
             android:layout_marginTop="24dp">
 
             <LinearLayout
@@ -103,6 +106,15 @@
                 app:trackTint="@color/white"/>
 
         </LinearLayout>
+
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/lottieAnimationView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:scaleType="fitStart"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"
+            app:lottie_rawRes="@raw/notification" />
 
     </LinearLayout>
 
